--- a/Wykresy/Wykresy/index.html
+++ b/Wykresy/Wykresy/index.html
@@ -15,16 +15,16 @@
         <h1>Lista Wykresów</h1>
 
         <ul>
-            <li><a href="łączenie_pętli.html"><p>Łączenie pętli</p></a></li>
+            <li><a href="laczenie_petli.html"><p>Łączenie pętli</p></a></li>
             <li><a href="stosowanie_iteratora_++i.html"><p>Stosowanie iteratora ++i</p></a></li>
-            <li><a href="zliczanie_pętli_w_dół.html"><p>Zliczanie pętli w dół</p></a></li>
-            <li><a href="rozwijanie_pętli.html"><p>Rozwijanie pętli</p></a></li>
+            <li><a href="zliczanie_petli_w_dol.html"><p>Zliczanie pętli w dół</p></a></li>
+            <li><a href="rozwijanie_petli.html"><p>Rozwijanie pętli</p></a></li>
             <li><a href="uproszczenie_operacji_algebraicznych.html"><p>Uproszczenie operacji algebraicznych</p></a></li>
-            <li><a href="użycie_typu_danych_double_zamiast_float.html"><p>Użycie typu danych double zamiast float</p></a></li>
+            <li><a href="uzycie_typu_danych_double_zamiast_float.html"><p>Użycie typu danych double zamiast float</p></a></li>
             <li><a href="funkcje_inline.html"><p>Funkcje inline</p></a></li>
-            <li><a href="usunięcie_zbędnych_wywołań_funkcji_z_pętli.html"><p>Usunięcie zbędnych wywołań funkcji z pętli</p></a></li>
-            <li><a href="użycie_lepszych_struktur_danych.html"><p>Użycie lepszych struktur danych</p></a></li>
-            <li><a href="odczytywanie_i_zapisywanie_ze_standardowego_wejścia_wyjścia.html"><p>Odczytywanie i zapisywanie ze standardowego wejścia wyjścia</p></a></li>
+            <li><a href="usuniecie_zbednych_wywolan_funkcji_z_petli.html"><p>Usunięcie zbędnych wywołań funkcji z pętli</p></a></li>
+            <li><a href="uzycie_lepszych_struktur_danych.html"><p>Użycie lepszych struktur danych</p></a></li>
+            <li><a href="odczytywanie_i_zapisywanie_ze_standardowego_wejscia_wyjscia.html"><p>Odczytywanie i zapisywanie ze standardowego wejścia wyjścia</p></a></li>
             <li><a href="bellman_ford.html"><p>Bellman Ford</p></a></li>
 
         </ul>
